adding new versions

--- a/KMeansClusterSimplified.ipynb
+++ b/KMeansClusterSimplified.ipynb
@@ -20,11 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we will import the necessary libraries into the file. \n",
-    "- Pandas is a very useful library for working with data and includes functions for analyzing and manipulating data.\n",
-    "- scikit-learn (sklearn) is the library that contains the tools and functions for machine learning and analysis.\n",
-    "- numpy is a general purpose library used for creating and working with arrays\n",
-    "- matplotlib is used to create graphs and visualizations of the data"
+    "First we will import the necessary libraries into the file. "
    ]
   },
   {
@@ -45,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we need to read the data we want to analyze. we can manually enter data into a script but the Pandas library has a function to read a csv file which is an easy way to read a large dataset into memory. we first save our file path into a variable (file_path) and use this as the perameter for the read_csv() function. If the csv file is saved to the same directory as the script we only need to use the name and extension of the file and makes reading the file simple."
+    "Next, we need to read the data we want to analyze. The Pandas library has a function to read a csv file which is an easy way to read a large dataset into memory. If the csv file is saved to the same directory as the script we only need to use the name and extension of the file and makes reading the file simple."
    ]
   },
   {
@@ -66,9 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This section of the code is preparing the data in a format that can be understood by the machine learing algorithm. The k means clustering algorithm only accepts numeric values and the data must use the same scale to avoid a bias toward values with a higer magnitude. \n",
-    "\n",
-    "Prining the results to the console allows us to look for errors in our data. Small spelling or capitalization errors can lead to skewed results."
+    "This section of the code is preparing the data in a format that can be understood by the machine learing algorithm. The k means clustering algorithm only accepts numeric values and the data must use the same scale to avoid a bias toward values with a higer magnitude. "
    ]
   },
   {
@@ -120,11 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This section actually applies the k means algorithm to the prepared data. \n",
-    "- The n_clusters parameter determine sets the number of clusters that will be calculated (we have a desired number here but you would determine this number based on the results of the elbow method or similar analysis). \n",
-    "- The random state initializes the random number generator behind the scenes so it does not matter what the value is as long as it remains the same across multiple runs of the code it will allow you to validate the results.\n",
-    "\n",
-    "This randomly assigns the the centroids then as we add each data point we calculate the distance to the centroid and assign that point to the closest cluster. Then the centroid is recalculated to represent the center of the cluster until all data points have been assigned to a cluster. This is the final step in creating our clusters that are as similar as possible. "
+    "This section actually applies the k means algorithm to the prepared data. "
    ]
   },
   {
@@ -208,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This step is creating empty buckets (arrays) and then looping through the clusters and evenly distribuing each cluster into the buckets. we essentially created the most similar groups we can with the clusters and now we will evenly split them into balanced groups."
+    "This step is creating empty buckets (arrays) and then looping through the clusters and evenly distribuing each cluster into the buckets. we essentially created the most similar groups we can with the clusters and now we will evenly split them into balanced groups and print them to the console."
    ]
   },
   {
@@ -229,27 +219,13 @@
     "data['balanced_group'] = None\n",
     "for group_number, group in enumerate(groups):\n",
     "    for person in group:\n",
-    "        data.loc[person.name, 'balanced_group'] = group_number"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Finally we print the results to the console. The balanced_group column represnts the buckets we created to hold the evenly distributed clusters and labels each row with a group number."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        data.loc[person.name, 'balanced_group'] = group_number\n",
+    "\n",
     "# this orders the data frame by the groups for easy analysis\n",
     "data = data.sort_values(by=['balanced_group'])\n",
     "\n",
     "# Print the resulting data\n",
-    "print(data[['name', 'department', 'role', 'exp_clinical', 'exp_tech', 'depth_clinical', 'depth_tech', 'cluster', 'balanced_group']])"
+    "print(data[['name','balanced_group']])"
    ]
   },
   {
@@ -257,7 +233,7 @@
    "metadata": {},
    "source": [
     "---Addendum:\n",
-    "*For simplcity we are manually setting the number of clusters we want to see, but in a situation where you do not know how many clusters to use you would use a technique such as the Elbow Method or the Silhouette Score to determine how many clusters ideally represent the dataset. The following code is an example of the Elbow method which plots the variation between using different numbers of clusters. The 'elbow' on the graph is where adding more clusters does not add any informantion and risks over-fitting the model and sub dividing actual groups. *\n",
+    "*For simplcity we are manually setting the number of clusters we want to see, but in a situation where you do not know how many clusters to use you would use a technique such as the Elbow Method to determine how many clusters ideally represent the dataset. *\n",
     "\n",
     "- how many natural groups do you think this data set forms? what should we have used for K?\n"
    ]
