updated export statement

--- a/KMeansClusterV2.ipynb
+++ b/KMeansClusterV2.ipynb
@@ -458,7 +458,8 @@
     "# Print the resulting data\n",
     "print(data[['name', 'department', 'role', 'exp_clinical', 'exp_tech', 'depth_clinical', 'depth_tech', 'cluster', 'balanced_group']])\n",
     "\n",
-    "data.to_csv('KmeansOutput.csv')"
+    "# Uncommenting this line can be used to export the results to a csv file\n",
+    "# data.to_csv('KmeansOutput.csv')"
    ]
   },
   {
