--- a/KMeansCluster.ipynb
+++ b/KMeansCluster.ipynb
@@ -75,7 +75,7 @@
    ],
    "source": [
     "# Read the Excel file\n",
-    "file_path = 'atendees.csv'  # Update this with the actual path of the Excel file you want to use.\n",
+    "file_path = 'attendees.csv'  # Update this with the actual path of the Excel file you want to use.\n",
     "data = pd.read_csv(file_path)\n",
     "\n",
     "# previews data from csv\n",
